--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@ body{
 }
 .titulo{
     text-align: center;
-    color: green;
+    color: white;
+    background-color:rgb(105, 101, 101) ;
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 #personajes-container{
     display: grid;
@@ -15,12 +19,16 @@ body{
 }
 #personajes-container article{
     padding: 10px;
-    box-shadow: 0px 0px 10px 3px green;
-    background-color: white;
+    background-color: rgb(105, 101, 101);
+    overflow: hidden;
 }
 
 #personajes-container article div img{
     width: 100%;
     min-width: 200px;
     border-radius: 20px;
+}
+#personajes-container article div img:hover{
+    transform: scale(1.2);
+    border-radius: 0;
 }
