--- a/style.css
+++ b/style.css
@@ -35,3 +35,18 @@ body {
     padding: 5px;
     height: auto;
 }
+
+
+
+/* Parte de los episodios */
+
+.episodios{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-gap: 20px;
+}
+.episodios article{
+    background-color: white;
+    padding: 10px;
+    margin: 0 5px 0 5px;
+}
